--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,11 +5,13 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="React Tailwind CSS/UI Boilerplate" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="description" content="Book store" />
 
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
-    <title>React Tailwind CSS/UI Boilerplate</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Book Store 📚</title>
   </head>
   <body class="antialiased bg-gray-200">
     <noscript>You need to enable JavaScript to run this app.</noscript>
