--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,10 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Book store" />
 
-    <link
-      href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
     <title>Book Store 📚</title>
   </head>
   <body class="antialiased bg-gray-200">
